--- a/source/Makefile
+++ b/source/Makefile
@@ -4,10 +4,15 @@ ARGS =
 
 CFLAGS += -Wall -Werror -Wextra
 
-# Uncomment one of the following to test that our code compiles against a standard
-#CFLAGS += -std=c89 -pedantic
-#CFLAGS += -std=c99 -pedantic
-#CFLAGS += -std=c11 -pedantic
+# targets to test against c89, c99, and c11 standards
+c89: CFLAGS += -std=c89 -pedantic
+c89: all
+
+c99: CFLAGS += -std=c99 -pedantic
+c99: all
+
+c11: CFLAGS += -std=c11 -pedantic
+c11: all
 
 export CFLAGS
 
